--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ build/
 .gradle
 .gradletasknamecache
 gradle-app.setting
-!gradle-wrapper.jar
+gradle-wrapper.jar
 
 ##############################
 ## IntelliJ
