--- a/model/build.gradle
+++ b/model/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'by.mjc'
+group 'com.epam.mjc.model'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -10,8 +10,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
 }
 
 test {
