basic repositories implementation

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'java'
+    id 'war'
 }
 
-group 'by.mjc'
+group 'com.epam.mjc'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -13,11 +14,15 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
-    implementation group: 'org.springframework', name: 'spring-core', version: '5.3.10'
-    implementation group: 'org.springframework', name: 'spring-context', version: '5.3.10'
     implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.10'
+    implementation group: 'org.springframework', name: 'spring-web', version: '5.3.10'
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.10'
 }
 
 test {
     useJUnitPlatform()
+}
+
+war{
+    archiveName = 'giftCertificate.war'
 }
