--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'com.epam.mjc.persistence'
+group 'com.epam.esm'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -10,8 +10,24 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'org.springframework', name: 'spring-jdbc', version: '5.3.10'
     implementation project(':model')
+
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.0'
+
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
+    implementation group: 'org.springframework', name: 'spring-jdbc', version: '5.3.10'
+    implementation group: 'org.springframework', name: 'spring-core', version: '5.3.10'
+    implementation group: 'org.springframework', name: 'spring-context', version: '5.3.10'
+    implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.10'
+
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
+    testImplementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.32'
 }
 
 test {
