--- a/persistence/src/main/resources/database.properties
+++ b/persistence/src/main/resources/database.properties
@@ -1,4 +1,5 @@
 jdbcUrl=jdbc:mysql://localhost:3306/gift_service
-driverClassName=com.mysql.jdbc.Driver
+driverClassName=com.mysql.cj.jdbc.Driver
 dataSource.user= root
 dataSource.password= root
+maximumPoolSize=100
