--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,13 @@
 plugins {
     id 'java'
     id 'war'
-    id 'java-library'
 }
 
-group 'com.epam.mjc'
+group 'com.epam.esm'
 version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
-}
-
-allprojects {
-    plugins.withType(JavaPlugin) {
-        dependencies {
-            implementation group: 'org.springframework', name: 'spring-core', version: '5.3.10'
-            implementation group: 'org.springframework', name: 'spring-context', version: '5.3.10'
-            implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.10'
-            compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
-            implementation group: 'org.springframework', name: 'spring-web', version: '5.3.10'
-            implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.10'
-            testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
-            testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
-        }
-    }
 }
 
 dependencies {
