add usage of Validate and DAO exceptions

--- a/web/src/main/resources/log4j.properties
+++ b/web/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option  
-log4j.rootLogger=INFO, file, stdout
+log4j.rootLogger=ERROR, file, stdout
 
 # Constants
 LOG-FOLDER=B:/MJC_School/REST API/logs
