--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
     testImplementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.32'
+
+    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 }
 
 test {
