--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -9,6 +9,11 @@ repositories {
     mavenCentral()
 }
 
+if (project.hasProperty('env')) {
+    println "Target environment: $env"
+    sourceSets.main.resources.srcDir "src/main/resources/$env"
+}
+
 dependencies {
     implementation project(':model')
 
@@ -21,13 +26,14 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.10'
 
     compileOnly 'org.projectlombok:lombok:1.18.20'
+    testImplementation 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.32'
 
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
-    testImplementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.32'
 
     testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 }
