--- a/service/build.gradle
+++ b/service/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.4.4'
 
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.2'
@@ -30,7 +33,9 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.12.2'
 
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
-    testImplementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.32'
+    implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.32'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
+
 }
 
 test {
