--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
 
     testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+    testImplementation group: 'org.springframework', name: 'spring-test', version: '5.3.10'
 }
 
 test {
