--- a/service/src/main/resources/errorMessages.properties
+++ b/service/src/main/resources/errorMessages.properties
@@ -1,15 +1,16 @@
-validationException.certificate.nameSize=Not valid certificate name. Name length should be less then 45.
-validationException.certificate.nameNull=Certificate name is required!
-validationException.certificate.durationNull=Certificate duration is required!
-validationException.certificate.durationNegative=Not valid certificate duration. Duration should be positive.
-validationException.certificate.descriptionNull=Certificate description is required!
-validationException.certificate.descriptionSize=Not valid certificate description. Name length should be less then 255.
-validationException.certificate.priceNull=Certificate price is required!
-validationException.certificate.priceNegative=Not valid certificate price. Price should be positive.
-validationException.tag.nameNull=Tag name is required!
-validationException.tag.nameSize=Not valid tag name. Name length should be less then 45.
+ValidationException.certificate.nameSize=Not valid certificate name. Name length should be less then 45.
+ValidationException.certificate.nameNull=Certificate name is required!
+ValidationException.certificate.durationNull=Certificate duration is required!
+ValidationException.certificate.durationNegative=Not valid certificate duration. Duration should be positive.
+ValidationException.certificate.descriptionNull=Certificate description is required!
+ValidationException.certificate.descriptionSize=Not valid certificate description. Name length should be less then 255.
+ValidationException.certificate.priceNull=Certificate price is required!
+ValidationException.certificate.priceNegative=Not valid certificate price. Price should be positive.
+ValidationException.tag.nameNull=Tag name is required!
+ValidationException.tag.nameSize=Not valid tag name. Name length should be less then 45.
 
-DAOException.tag.emptyKeyHolder=Error during saving tag. KeyHolder is empty.
-DAOException.certificate.emptyKeyHolder=Error during saving certificate. KeyHolder is empty.
-DAOException.tag.notFound=Tag with the specified ID does not exist.
-DAOException.certificate.notFound=Certificate with the specified ID does not exist.
+CustomDataIntegrityViolationException.tag.emptyKeyHolder=Error during saving tag. KeyHolder is empty.
+CustomDataIntegrityViolationException.certificate.emptyKeyHolder=Error during saving certificate. KeyHolder is empty.
+
+EntityNotFoundException.tag=Tag with the specified ID does not exist.
+EntityNotFoundException.certificate=Certificate with the specified ID does not exist.
