--- a/web/src/main/resources/log4j.properties
+++ b/web/src/main/resources/log4j.properties
@@ -1,9 +1,7 @@
 # Root logger option  
 log4j.rootLogger=ERROR, file, stdout
-
 # Constants
 LOG-FOLDER=B:/MJC_School/REST API/logs
-
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=${LOG-FOLDER}/log.txt
@@ -14,11 +12,10 @@ log4j.appender.file.MaxFileSize=100KB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
-log4j.appender.file.policies.type = Policies
-log4j.appender.file.policies.time.type = TimeBasedTriggeringPolicy
-log4j.appender.file.policies.size.type = SizeBasedTriggeringPolicy
+log4j.appender.file.policies.type=Policies
+log4j.appender.file.policies.time.type=TimeBasedTriggeringPolicy
+log4j.appender.file.policies.size.type=SizeBasedTriggeringPolicy
 log4j.appender.file.policies.size.size=100KB
-
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
