--- a/model/build.gradle
+++ b/model/build.gradle
@@ -10,12 +10,15 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.10'
-    compileOnly 'org.projectlombok:lombok:1.18.20'
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.5.5'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.5'
 
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
-    testImplementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.32'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.2'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.12.2'
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.12.2'
+
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
 }
 
 test {
