--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,7 +1,19 @@
+buildscript {
+    ext {
+        springBootVersion = '2.5.5'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.5.5")
+    }
+}
+
 plugins {
     id 'java'
     id 'war'
-
+    id 'org.springframework.boot' version '2.5.5'
 }
 
 group 'com.epam.esm'
@@ -11,32 +23,15 @@ repositories {
     mavenCentral()
 }
 
-ext {
-    isProd = System.properties['env'] == 'prod'
-    isDev = System.properties['env'] == 'dev'
-}
-
 dependencies {
     implementation project(':service')
 
-    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
-    implementation group: 'org.springframework', name: 'spring-core', version: '5.3.10'
-    implementation group: 'org.springframework', name: 'spring-context', version: '5.3.10'
-    implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.10'
-    implementation group: 'org.springframework', name: 'spring-web', version: '5.3.10'
-    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.10'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.5.5'
 
-    compileOnly 'org.projectlombok:lombok:1.18.20'
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
-
-    implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'
-
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
     implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.32'
-    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
-
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 test {
