huge friday update

--- a/persistence/src/main/resources/database.properties
+++ b/persistence/src/main/resources/database.properties
@@ -1,5 +1,8 @@
-jdbcUrl=jdbc:mysql://localhost:3306/gift_service
 driverClassName=com.mysql.cj.jdbc.Driver
-dataSource.user=root
-dataSource.password=root
-maximumPoolSize=100
+jdbcUrl=jdbc:mysql://localhost:3306/gift_service?characterEncoding=UTF-8
+maximumPoolSize=20
+username=root
+password=root
+dataSource.cachePrepStmts=true
+dataSource.prepStmtCacheSize=250
+dataSource.prepStmtCacheSqlLimit=2048
