--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -1,17 +1,15 @@
 plugins {
     id 'java'
+    id 'idea'
+    id 'war'
 }
 
-group 'com.epam.esm'
-version '1.0-SNAPSHOT'
+group = 'com.epam.esm'
+version = '0.0.1-SNAPSHOT'
+
 
 repositories {
     mavenCentral()
-}
-
-if (project.hasProperty('env')) {
-    println "Target environment: $env"
-    sourceSets.main.resources.srcDir "src/main/resources/$env"
 }
 
 dependencies {
