--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,17 +1,12 @@
 buildscript {
-    ext {
-        springBootVersion = '2.5.5'
-    }
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.5.5")
-    }
+    ext { springBootVersion = '2.5.5' }
+    repositories { mavenCentral() }
+    dependencies { classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") }
 }
 
 plugins {
     id 'java'
+    id 'idea'
     id 'war'
     id 'org.springframework.boot' version '2.5.5'
 }
@@ -23,10 +18,20 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
+    configurations {
+        all {
+            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+            exclude group: 'ch.qos.logback', module: 'logback-classic'
+            exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
+        }
+    }
     implementation project(':service')
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.5.5'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.5.5'
+    implementation 'org.springframework.boot:spring-boot-starter-hateoas:2.5.5'
 
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
