--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -14,7 +14,7 @@ repositories {
 
 dependencies {
     implementation project(':model')
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.5.5'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.5.5'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.5.5'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.5'
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.5.5'
