--- a/service/build.gradle
+++ b/service/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.5.5'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.5.5'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.5'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas:2.5.5'
 
     implementation 'at.favre.lib:bcrypt:0.9.0'
