--- a/web/build.gradle
+++ b/web/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.5.5'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.5.5'
+    implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas:2.5.5'
 
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
