--- a/web/src/main/resources/log4j.properties
+++ b/web/src/main/resources/log4j.properties
@@ -17,7 +17,7 @@ log4j.appender.file.policies.time.type=TimeBasedTriggeringPolicy
 log4j.appender.file.policies.size.type=SizeBasedTriggeringPolicy
 log4j.appender.file.policies.size.size=100KB
 log4j.logger.org.hibernate.SQL=debug
-log4j.logger.org.hibernate.type=trace
+#log4j.logger.org.hibernate.type=trace
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
