--- a/model/build.gradle
+++ b/model/build.gradle
@@ -12,8 +12,9 @@ repositories {
 
 dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.5.5'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.5'
-
+    implementation 'javax.persistence:javax.persistence-api:2.2'
+    implementation 'org.springframework:spring-orm:5.3.12'
+    implementation 'org.hibernate:hibernate-core:5.4.32.Final'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.2'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.12.2'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
