--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -21,9 +21,11 @@ dependencies {
             exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
         }
     }
+    implementation 'org.springframework:spring-orm:5.3.12'
+    implementation 'org.hibernate:hibernate-core:5.4.32.Final'
+    implementation 'javax.persistence:javax.persistence-api:2.2'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.5.5'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.5.5'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.5'
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.5.5'
 
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
