--- a/service/build.gradle
+++ b/service/build.gradle
@@ -16,7 +16,9 @@ dependencies {
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.5.5'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.5.5'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.5'
+    implementation 'org.springframework:spring-orm:5.3.12'
+    implementation 'org.hibernate:hibernate-core:5.4.32.Final'
+    implementation 'javax.persistence:javax.persistence-api:2.2'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas:2.5.5'
 
     implementation 'at.favre.lib:bcrypt:0.9.0'
