--- a/web/build.gradle
+++ b/web/build.gradle
@@ -32,7 +32,9 @@ dependencies {
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.5.5'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.5.5'
-    implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+    implementation 'org.springframework:spring-orm:5.3.12'
+    implementation 'org.hibernate:hibernate-core:5.4.32.Final'
+    implementation 'javax.persistence:javax.persistence-api:2.2'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas:2.5.5'
 
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
